# codeplug-csv

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: build.yml
docs/: flash-feasibility.md
src/codeplug_csv/: __main__.py  cli.py  config.py  extract.py  flash.py  flash_cli.py  load.py  models.py  regions.py  simplex.py  transform.py  zones.py
src/repeater_csv/: __main__.py  cli.py  config.py  extract.py  load.py  models.py  simplex.py  transform.py  zones.py
tests/: conftest.py  test_config.py  test_extract.py  test_flash.py  test_integration.py  test_load.py  test_regions.py  test_simplex.py  test_transform.py  test_zones.py
tests/fixtures/: sample_api_response.json  sample_brandmeister_response.json
