[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeplug-csv"
version = "0.1.0"
description = "RSGB repeater data to Anytone AT-D878UV CSV converter"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
codeplug-csv = "codeplug_csv.cli:main"
codeplug-csv-flash = "codeplug_csv.flash_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
